--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1107,6 +1107,8 @@
             </intent-filter>
         </activity>
 
+        <activity android:name="ChooseLockPatternSize" android:exported="false"/>
+
         <activity android:name="ChooseLockPattern" android:exported="false"/>
 
         <activity android:name="ChooseLockPassword" android:exported="false"
