--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1611,6 +1611,8 @@
 
         <activity android:name=".profiles.ProfileGroupConfig" />
 
+        <activity android:name=".profiles.WifiTriggers" />
+
         <activity android:name=".profiles.NFCProfileWriter" />
 
         <activity android:name=".profiles.NFCProfileSelect" />
