--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -357,17 +357,18 @@
             </intent-filter>
         </activity-alias>
 
-        <activity android:name="ApnSettings"
-                android:label="@string/apn_settings"
-                android:configChanges="orientation|keyboardHidden|screenSize"
-                android:launchMode="singleTask"
-                android:parentActivityName="Settings$WirelessSettingsActivity">
+        <activity android:name="Settings$ApnSettingsActivity" android:label="@string/apn_settings"
+                  android:configChanges="orientation|keyboardHidden|screenSize"
+                  android:launchMode="singleTask" android:clearTaskOnLaunch="true"
+                  android:parentActivityName="Settings$WirelessSettingsActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <action android:name="android.settings.APN_SETTINGS" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.VOICE_LAUNCH" />
             </intent-filter>
+            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
+                android:value="com.android.settings.ApnSettings" />
         </activity>
 
         <activity android:name="Settings$BluetoothSettingsActivity"
@@ -1143,8 +1144,9 @@
         <activity android:name=".deviceinfo.MiscFilesHandler"
                 android:theme="@android:style/Theme.Holo.DialogWhenLarge"/>
 
-        <activity android:name="ApnEditor"
-                android:label="@string/apn_edit">
+        <activity android:name="Settings$ApnEditorActivity"
+                android:label="@string/apn_edit"
+                android:clearTaskOnLaunch="true">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
                 <action android:name="android.intent.action.EDIT" />
@@ -1157,6 +1159,8 @@
                 <category android:name="android.intent.category.DEFAULT" />
                 <data android:mimeType="vnd.android.cursor.dir/telephony-carrier" />
             </intent-filter>
+            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
+                android:value="com.android.settings.ApnEditor" />
         </activity>
 
         <activity android:name="MediaFormat" android:label="@string/media_format_title">
@@ -1718,6 +1722,8 @@
 
         <activity android:name=".profiles.ProfilesAppPicker" android:label="@string/select_application"
                 android:theme="@*android:style/Theme.Holo.Dialog" />
+
+        <activity android:name=".ApnEditor" />
 
         <!-- Profiles - end -->
 
